2006-08-27  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/localplayer.cpp, src/gui/sell.cpp, src/gui/trade.cpp,
	src/gui/char_select.cpp, src/gui/chat.cpp, src/gui/buy.cpp,
	src/engine.cpp, src/beingmanager.cpp, src/npc.cpp,
	src/net/messageout.cpp, src/net/messageout.h: Got rid of the default
	MessageOut constructor, since all messages should have an ID.

2006-08-26  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/char_select.cpp, src/gui/playerbox.cpp, src/player.cpp,
	src/main.cpp, src/being.cpp, src/net/beinghandler.cpp, src/being.h,
	data/graphics/sprites/hairstyle0.xml,
	data/graphics/sprites/Makefile.am: Got rid of numerous additions and
	substractions to the hair style and color. Hair style 0 was added and
	defined as being bald (so bald is no longer a hardcoded style).
	* src/player.cpp, src/being.cpp, src/net/charserverhandler.cpp,
	src/being.h: Fixed player sprite not showing up.

2006-08-26  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/net/chathandler.cpp, src/gui/chat.cpp, src/net/protocol.h: Added
	support for "say around" messages.
	* src/net/beinghandler.cpp: Partly implemented being creation, so that
	chat works.
	* src/game.cpp, src/engine.h, src/beingmanager.h, src/gui/trade.cpp,
	src/gui/sell.cpp, src/gui/char_select.cpp, src/gui/chat.h,
	src/gui/buy.h, src/gui/chat.cpp, src/gui/char_select.h,
	src/gui/buy.cpp, src/gui/sell.h, src/gui/trade.h, src/engine.cpp,
	src/beingmanager.cpp, src/npc.cpp, src/main.cpp, src/npc.h,
	src/net/tradehandler.h, src/net/messagehandler.h, src/net/network.h,
	src/net/charserverhandler.cpp, src/net/messagehandler.cpp,
	src/net/network.cpp, src/localplayer.h, src/game.h: Made the Network
	class a purely static interface, as there is only one instance.
	* src/net/beinghandler.cpp, src/net/beinghandler.h,
	src/net/protocol.h: Added support for "beings move" messages.

2006-08-21  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev, tmw.cbp: Updated project files.
