@@ -1,3 +1,9 @@
+2006-08-26  Guillaume Melquiond  <guillaume.melquiond@gmail.com>
+
+	* src/localplayer.cpp, src/net/protocol.h: Send move message
+	whenever a destination is selected.
+	* src/beinghandler.cpp: Smoothed being trajectories.
+
 2006-08-27  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/localplayer.cpp, src/gui/sell.cpp, src/gui/trade.cpp,
